fixed wrong indexes for skip and play